--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  margin: 8px;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+  color: #3e3e3e;
+}
